# gramble_and_glyde

./: .gitignore  Cargo.toml  README.md  build.rs  rust-toolchain.toml
agb-ext/: Cargo.toml
agb-ext/src/: anim.rs  blend.rs  camera.rs  collision.rs  ecs.rs  lib.rs  math.rs  sound.rs  tiles.rs
gfx/: glyde.aseprite  gramble.aseprite  gramble_pipe.aseprite  palette.aseprite
maps/: collision.tsx  grambles_room.tmx  metatileset.tmx  metatileset.tsx  single_screen_demo.tmx  slope_test.tmx  tileset.tsx
src/: main.rs  object.rs  player.rs  tiles.rs  world.rs
