[package]
name = "gramble-and-glyde"
version = "0.1.0"
authors = ["Chelle Clark"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
agb = "0.20.5"
agb-ext = { path = "agb-ext" }

[build-dependencies]
tiled = "0.12.0"

[profile.dev]
opt-level = 3
debug = true

[profile.release]
opt-level = 3
lto = "fat"
debug = true
